--- a/Chem150/metallocene/doc/report/bimetallic.tex
+++ b/Chem150/metallocene/doc/report/bimetallic.tex
@@ -9,21 +9,56 @@
 
 \maketitle
 
-\section{Abstract}
+\section{Abstract} % Last
 
-\section{Introduction}
+\section{Introduction} % Third
+The valence electrons on lanthanide and actinide cations were thought to not participate in bonding due to the limited radial extent of the $f$-orbitals.
+However, recent studies in Ln$^{2+}$ complexes revealed that lignad field splitting can lower the energy of $d$-orbitals and lead to the formation of bimetallic lanthanide and actinide complexes.
+The aim of this experiment is to investigate the possibility of Y-Y bonding in the recently synthesized bimetallic complex [(Cp)$_2$Y($\mu - $H)]$_2$. \\
+% Introduce the works used related to this experiment.
 
-\section{Methods}
-\subsection{Statement of the Models}
+\section{Methods} % Start Here
+\subsection{Statement of the Models} % Need to check template
+% Insert model of 4f and 5d radial distribution functions
+In a lanthanide, the 4$f$ orbitals are much closer to the nuclei compared to the 5d orbital. % Need to fact check this.
+Electrons removed fom the system will come from the 5$d$ atomic orbital first, increasing the energy of the orbital while not affecting the 4$f$ atomic orbital as much. 
+As the oxidation state increaes, the energy separation between the two orbitals decreases. \\
+Orbital localization is expected to have no effect on the total energy of a molecule, nor the molecular structure.
+The orbital energies are expected to increase when localization is applied.
+% Expectation of orbital localization being applied to a hypovalent compound
+
 \subsection{Computational Details}
+A DFT calculation was performed on B$_2$H$_6$ using the TPSSh functional and def2-SVP basis sets.
+The diborane molecule was assigned D$_{2h}$ symmetry.
+The canonical Kohn-Sham molecular orbitals were then plotted and assigned. %according to what
+The diborane symmetry was then lowered to C$_1$ and Boys localization was performed.
+The resulting molecular orbitals were then plotted and assigned as well.
 
-\section{Results and Discussion}
+% Include assignment 5.1 computational details please
+Ground state optimizations of [(Cp)$_2$Y($\mu - $H)]$_2$ and its monoanion were performed at the TPSSh level using def2-SVP basis sets.
+Solvation of the complexes in THF was simulated with a dielectric constant of $7.58$. 
+The HOMO-LUMO gaps of different spin states were analyzed to determine which one the molecule would be in.
+The spin states of the complexes was used to determine whether the complex would be EPR active.
+Frontier orbitals were visualized to deterime whether metal-metal bonding was observe
+% Compare diborane and lanthanide units later.
 
-\section{Conclusions}
+\section{Results and Discussion} % Second
+
+% Include assignmen 5.1 results please
+The HOMO-LUMO gap of the neutral singlet complex is +4.29684 eV, whereas the neutral triplet complex yielded a negative gap.
+A doublet state was the only reasonable spin state for the monoanion complex without exciting the electron.
+The closed shell spin state of the neutral complex makes it EPR inactive, whereas the lone electron on the monoanion makes it EPR active.
+The bond length between the metal centers in the complex were determined to be 354.55pm and 346.19pm for the neutral and monoanion complex, respectively.
+This corresponds to a 0.724\% error in the neutral complex and a 0.344\% error in the monoanion complex when compared to ().
+% Insert image of frontier orbitals
+The frontier orbitals of the monoanion complex suggest metal-metal bonding. % Go intodetail about why.
+% Suggest minimal molecular orbital later
+
+\section{Conclusions} % Fourth
 
 \section*{Appendix}
 \begin{tabular}{cc}
-	Structure & HOMO-LUMO Gap (eV) \\
+	 & HOMO-LUMO Gap (eV) \\
 	Anion & $+0.74691$ \\
 	Neutral Singlet & $+4.29684$ \\
 	Neutral Triplet & $-2.38537$ \\
@@ -31,7 +66,7 @@
 \end{tabular}
 
 \begin{tabular}{cc}
-	Structure & Y-Y Distance (pm) \\
+	 & Y-Y Distance (pm) \\
 	Neutral & $354.55$ \\
 	Neutral Exp & $352$ \\
 	Anion & $347.19$ \\
