Rename files, update pre lab for radical chemistry experiment

--- a/Chem150/metallocene/doc/report/main.tex
+++ b/Chem150/metallocene/doc/report/main.tex
@@ -12,21 +12,24 @@
 \section{Abstract} % Last
 
 \section{Introduction} % Third
-The valence electrons on lanthanide and actinide cations were thought to not
-participate in bonding due to the limited radial extent of the $f$-orbitals.
-However, recent studies in Ln$^{2+}$ complexes revealed that lignad field
-splitting can lower the energy of $d$-orbitals and lead to the formation of
-bimetallic lanthanide and actinide complexes.  The aim of this experiment is to
-investigate the possibility of Y-Y bonding in the recently synthesized
+The valence electrons on lanthanide cations were thought to not participate in
+bonding due to the limited radial extent of the $f$-orbitals. Ln$^{2+}$
+complexes with 4$f^n$5$d^1$ configurations were recently synthesized, which
+could lead to the formation of metal-metal bonds. The aim of this experiment
+is to investigate the possibility of Y-Y bonding in the recently synthesized
 bimetallic complex [(Cp)$_2$Y($\mu - $H)]$_2$. \\
 % Introduce the works used related to this experiment.
+Recent studies in Ln$^{2+}$ complexes revealed that lignad field splitting can
+lower the energy of $d$-orbitals and lead to the formation of bimetallic
+lanthanide and actinide complexes. The work of Dumas et al. is referenced to
+
 
 \section{Methods} % Start Here
 \subsection{Statement of the Models} % Need to check template
 % Insert model of 4f and 5d radial distribution functions
 In a lanthanide, the 4$f$ orbitals are much closer to the nuclei compared to the
 5d orbital. % Need to fact check this.
-Electrons removed fom the system will come from the 5$d$ atomic orbital first,
+Electrons removed from the system will come from the 5$d$ atomic orbital first,
 increasing the energy of the orbital while not affecting the 4$f$ atomic orbital
 as much.  As the oxidation state increaes, the energy separation between the two
 orbitals decreases. \\ Orbital localization is expected to have no effect on the
@@ -39,15 +42,15 @@ are expected to increase when localization is applied.
 A DFT calculation was performed on B$_2$H$_6$ using the TPSSh functional and
 def2-SVP basis sets.  The diborane molecule was assigned D$_{2h}$ symmetry.
 Boys localization was performed after lowering to $C_1$ symmetry.  The canonical
-Kohn-Sham molecular orbitals and Boys localized orbitals were plotted.
-
+Kohn-Sham molecular orbitals and Boys localized orbitals of the  were plotted and
+assigned. \\
 Ground state optimizations of [(Cp)$_2$Y($\mu - $H)]$_2$ and its monoanion were
 performed at the TPSSh level using def2-SVP basis sets.  Solvation of the
 complexes in THF was simulated with a dielectric constant of $7.58$.  The
 HOMO-LUMO gaps of different spin states were analyzed to determine which one the
 molecule would be in.  The spin states of the complexes was used to determine
 whether the complex would be EPR active.  Frontier orbitals were visualized to
-deterime whether metal-metal bonding was observe
+deterime the possibility of metal-metal bonding. 
 % Compare diborane and lanthanide units later.
 
 \section{Results and Discussion} % Second
@@ -75,31 +78,32 @@ deterime whether metal-metal bonding was observe
 \end{table}
 
 % Include assignmen 5.1 results please
-The HOMO-LUMO gap of the neutral singlet complex was +4.29684 eV, whereas the
-neutral triplet complex yielded a negative gap.  A doublet state was the only
+The HOMO-LUMO gap of the neutral singlet complex is +4.29684 eV, whereas the
+neutral triplet complex yields a negative gap. A doublet state is the only
 reasonable spin state for the monoanion complex without exciting the electron.
-The doublet state had a smaller HOMO-LUMO gap than the neutral closed-shell
-complex of +0.74691 eV, and the excited quartet state also had a negative gap.
+The doublet state has a smaller HOMO-LUMO gap than the neutral closed-shell
+complex of +0.74691 eV, and the excited quartet state also has a negative gap.
 The closed shell spin state of the neutral complex makes it EPR inactive,
-whereas the lone electron on the monoanion makes it EPR active.  The bond length
-between the metal centers in the complex were determined to be 354.55pm and
-346.19pm for the neutral and monoanion complex, respectively.  This corresponds
-to a 0.724\% error and a 0.344\% error respectively when compared to Dumas et
-al. \cite{dumas}
+whereas the lone electron on the monoanion makes it EPR active. The bond length
+between the metal centers in the complex are be 354.55pm and 346.19pm for the
+neutral and monoanion complex, respectively. This corresponds to a 0.724\%
+error and a 0.344\% error respectively when compared to Dumas et al.
+\cite{dumas} The frontier orbitals of the monoanion complex are visualized in
+Figure 1.  
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth]{../images/lanthanide/merged.jpg}
 \end{figure}
 
-% Suggest minimal molecular orbital later.
+% Suggest minimal molecular orbital of Yttrium and Boron units.
 
 \section{Conclusions} % Fourth
 
 \begin{thebibliography}{80}
 	\bibitem{dumas} Megan T. Dumas et al. “Synthesis and reductive
-		chemistry of bimetallic and trimetallic rare- 2 earth
-		metallocene hydrides with (C5H4SiMe3)1- ligands”. In: J.
+		chemistry of bimetallic and trimetallic rare-earth metallocene
+		hydrides with (C$_5$H$_4$SiMe$_3$)$^{1-}$ ligands”. In: J.
 		Organomet. Chem. 849-850 3 (2017), pp.  38–47. doi:
 		10.1016/j.jorganchem.2017.05.057.
 \end{thebibliography}
