--- a/Chem150/radicals/doc/pre-lab/main.tex
+++ b/Chem150/radicals/doc/pre-lab/main.tex
@@ -13,12 +13,14 @@
 \textbf{Assignment 6.1}
 Limitations of transition state theory
 \begin{enumerate}
-	\item Assuming $k_2 >> 0$, the reaction should not proceed in the reverse direction from the transition state to the product.
+	\item Is the activated complex equivalent to the "dividing surface" ? \\
+	Assuming $k_2 >> 0$, the reaction should not proceed in the reverse direction from the transition state to the product.
 	Therefore, the activated complex is equivalent to the "dividing surface".
 
-	\item TST relies on the reactants to $X^\ddag$ transition to be the rate determinig step so that a quasi-equilibrium is formed.
-	Any reaction in which the intermediate lifetime is short-lived will cause TST to fail.
-	One such reaction is (insert reaction lol)
+	\item Give an example of a chemical reaction where TST fails, and explain why. \\
+	Transition state theory relies on transition states existing long enough for a Boltzman distribution to form.
+	In multistep reactions, there are multiple transition step before the product is produced, so each step would need to reach quasi-equilibrium in before being able to proceed.
+	TST fails when any step's intermediate structure is too short lived.
 \end{enumerate}
 
 \textbf{Assignment 6.2}
@@ -49,20 +51,22 @@ Eyring equation
 
 \textbf{Assignment 6.3}
 Lewis structures and their limitations
-
+% Fix graphics to better represent the structure's sp$^3$ hybridization
 \begin{enumerate}
 	\item Draw the Lewis structure of the reacting radical for the reaction in Fig. 6.2.2.
 		\begin{figure}[h]
 			\centering
-			\includegraphics[width=\textwidth]{reacting-radical.pdf}
+			\includegraphics[width=\textwidth]{images/reacting-radical.pdf}
 		\end{figure}
 	\item Draw structures for the transition states leading to the syn and the anti products.
 		\begin{figure}[h]
 			\centering
-			\includegraphics[width=\textwidth]{syn-anti.pdf}
+			\includegraphics[width=\textwidth]{images/syn-anti.pdf}
 		\end{figure}
 
-	\item Why is the syn/anti selectivity difficult to predict without a calculation ?
+	\item Why is the syn/anti selectivity difficult to predict without a calculation ? \\
+	The carbon radical stereocenter is sp$^3$ hybridized, so simple factors like steric hinderences are less obvious in determining selectivity.
+	
 \end{enumerate}
 
 \enddocument
