--- a/Chem150/radicals/doc/pre-lab/main.tex
+++ b/Chem150/radicals/doc/pre-lab/main.tex
@@ -58,10 +58,11 @@ Lewis structures and their limitations
 			\centering
 			\includegraphics[width=\textwidth]{images/reacting-radical.pdf}
 		\end{figure}
+\newpage
 	\item Draw structures for the transition states leading to the syn and the anti products.
 		\begin{figure}[h]
 			\centering
-			\includegraphics[width=\textwidth]{images/syn-anti.pdf}
+			\includegraphics[width=0.9\textwidth]{images/syn-anti.pdf}
 		\end{figure}
 
 	\item Why is the syn/anti selectivity difficult to predict without a calculation ? \\
