--- a/Physics112/homework/hw8/homework-8.tex
+++ b/Physics112/homework/hw8/homework-8.tex
@@ -10,4 +10,45 @@
 
 \maketitle
 
+\textbf{Problem 5.12}
+Use the result of Ex. 5.6 to calculate the magnetic field at the center of a uniformly charged spherical shell, of radius $R$ and total charge $Q$, spinning at constant angular velocity $\omega$
+$$B(z) = \frac{\mu_0 I}{4 \pi} \frac{cos\theta}{r^2} 2 \pi R = \frac{\mu_0 I}{2} \frac{R^2}{(R^2 + z^2)^{\frac{3}{2}}}$$
+% width = r d\theta
+
+$\theta$ is from the center of the sphere instead of from the ring, so $cos\theta \rightarrow sin\theta$.
+\begin{equation*}
+\begin{split}
+	R & \rightarrow R sin\theta \\
+	dI & = K R d\theta \\
+	& = \sigma v R d\theta \\
+	& = \frac{Q}{4 \pi R^2} R sin\theta \omega R d\theta \\
+	& = \frac{Q \omega}{4 \pi} sin\theta d\theta \\
+	dB & = \frac{2 \pi \mu_0}{4 \pi} \frac{R sin^2\theta}{R^2} dI \\
+	& = \frac{\mu_0}{2 R} sin^2\theta \frac{Q \omega}{4 \pi} sin\theta d\theta \\
+	& = \frac{Q \omega \mu_0}{8 \pi R} \int_0^\pi sin^3\theta d\theta \\
+	& = \frac{Q \omega \mu_0}{8 \pi R} [\frac{1}{3} cos^3\theta - cos\theta]_0^\pi \\
+	& = \boxed{\frac{Q \omega \mu_0}{6 \pi R}}
+\end{split}
+\end{equation*}
+
+\textbf{Problem 5.13}
+Suppose you have two infinite straight-line charges $\lambda$, a distance $d$ apart, moving along at a constant speed $v$.
+How great would $v$ have to be in order for the magnetic attraction to balance the electrical repulsion ?
+Work out the actual number.
+Is this a reasonable sort of speed ?
+
+% imagine both lines pointing towards the page
+% q = lamba
+% Coloumb and Lorentz force
+
+Biot-Savart:
+$$B(r) = \frac{\mu_0 I}{4 \pi} \int \frac{dl x \hat{r}}{r^2}$$
+
+\begin{equation*}
+\begin{split}
+	F_C & = F_L \\
+	\frac{Q}{4 \pi \epsilon_0 d^2} & = \int (I d\vec{l} x \vec{B})
+\end{split}
+\end{equation*}
+
 \end{document}
