--- a/Physics112/homework/hw8/homework-8.tex
+++ b/Physics112/homework/hw8/homework-8.tex
@@ -37,18 +37,99 @@ How great would $v$ have to be in order for the magnetic attraction to balance t
 Work out the actual number.
 Is this a reasonable sort of speed ?
 
-% imagine both lines pointing towards the page
-% q = lamba
-% Coloumb and Lorentz force
+\begin{equation*}
+\begin{split}
+	E & = \frac{\lambda L}{2 \pi \epsilon_0 d^2} \\
+	B & = \frac{\mu_0 I L}{4 \pi d^2} \\
+	F_C & = - F_L \\
+	\frac{1}{4 \pi \epsilon_0} \frac{(\lambda L)^2}{d^2} & = - \lambda L (\frac{\lambda L}{2 \pi \epsilon_0 d^2} + v \frac{\mu_0 I L}{4 \pi d^2}) \\
+	\frac{1}{4 \epsilon_0} & = - \frac{1}{2 \epsilon_0} - \frac{\mu_0 v^2}{4} \\
+	1 & = - 2 - \mu_0 \epsilon_0 v^2 \\
+	 v^2 & = \frac{1}{\mu_0 \epsilon_0} \\
+	 v & = \boxed{\frac{1}{\sqrt{\mu_0 \epsilon_0}}}
+\end{split}
+\end{equation*}
 
-Biot-Savart:
-$$B(r) = \frac{\mu_0 I}{4 \pi} \int \frac{dl x \hat{r}}{r^2}$$
+The speed of light is also $\frac{1}{\sqrt{\mu_0 \epsilon_0}}$, so this is not possible. 
+
+\textbf{Problem 5.14}
+A steady current $I$ flows down a long cylindrical wire of radius $a$.
+Find the magnetic field, both inside and outside the wire if:
+
+\textbf{(a)}
+the current is uniformly distributed over the surface of the wire.
+
+When $s < a$:
+\begin{equation*}
+\begin{split}
+	\int B \cdot dl & = \mu_0 I \\
+	B 2 \pi s & = 0 \\
+	B & = \boxed{0}
+\end{split}
+\end{equation*}
+
+When $s > a$:
+\begin{equation*}
+\begin{split}
+	\int B \cdot dl & = \mu_0 I \\
+	B 2 \pi s & = \mu_0 I \\
+	B & = \boxed{\frac{\mu_0 I}{2 \pi s} \hat{\phi}}
+\end{split}
+\end{equation*}
+
+\textbf{(b)}
+the current is distributed in such a way that $J$ is proportional to $s$, the distance from the axis.
 
 \begin{equation*}
 \begin{split}
-	F_C & = F_L \\
-	\frac{Q}{4 \pi \epsilon_0 d^2} & = \int (I d\vec{l} x \vec{B})
+	J(s) & = k s \\
+	I & = \int_0^a k s \pi s ds \\
+	& = \frac{1}{3} k \pi [s^3]_0^a \\
+	& = \frac{1}{3} k \pi a^3 \\
+	k & = \frac{3 I}{a^3 \pi}
 \end{split}
 \end{equation*}
+
+When $s < a$:
+\begin{equation*}
+\begin{split}
+	I_{\text{enc}} & = \int_0^s \frac{3 I}{a^3 \pi} s \pi s ds \\
+	& = \frac{3 I}{a^3} \frac{1}{3} [s^3]_0^s \\
+	& = I \frac{s^3}{a^3} \\
+	\int B \cdot dl & = \mu_0 I \\
+	B 2 \pi s & = \mu_0 I \frac{s^3}{a^3} \\
+	B & = \boxed{\frac{\mu_0 I}{2 \pi} \frac{s^2}{a^3} \hat{\phi}}
+\end{split}
+\end{equation*}
+
+When $s > a$:
+\begin{equation*}
+\begin{split}
+	\int B \cdot dl & = \mu_0 I_{\text{enc}} \\
+	B 2 \pi s & = \mu_0 I \\
+	B & = \boxed{\frac{\mu_0 I}{2 \pi s} \hat{\phi}}
+\end{split}
+\end{equation*}
+
+\textbf{Problem 5.25}
+Find the magnetic vector potential of a finite segment of straight wire carrying a current $I$.
+[Put the wire on the $z$-axis, from $z_1$ to $z_2$, and use Eq. 5.66.]
+Check that your answer is consistent with Eq. 5.37.
+
+Eq. 5.66:
+$$A = \frac{\mu_0 I}{4 \pi} \int \frac{dl}{r}$$
+
+Using cylindrical coordinates:
+\begin{equation*}
+\begin{split}
+	r^2 & = z^2 + s^2 \\
+	A & = \frac{\mu_0 I}{4 \pi} \int_{z_1}^{z_2} \frac{dz}{\sqrt{z^2 + s^2}} \hat{z} \\
+	& = \frac{\mu_0 I}{4 \pi} \int_{z_1}^{z_2} [ln(z + \sqrt{s^2 + z^2})]_{z_1}^{z_2} \\
+	& = \boxed{\frac{\mu_0 I}{4 \pi} ln[\frac{z_2 + \sqrt{s^2 + z_2^2}}{z_1 + \sqrt{s^2 + z_1^2}}] \hat{z}}
+\end{split}
+\end{equation*}
+
+Checking consistency:
+
 
 \end{document}
