--- a/Physics112/homework/hw8/homework-8.tex
+++ b/Physics112/homework/hw8/homework-8.tex
@@ -130,6 +130,14 @@ Using cylindrical coordinates:
 \end{equation*}
 
 Checking consistency:
-
+\begin{equation*}
+\begin{split}
+	B & = \nabla \times A \\
+	& = - \frac{\partial}{\partial s} A_z \hat{\phi} \\
+	& = - \frac{\mu_0 I}{4 \pi} \frac{\partial}{\partial s} [ln[\frac{z_2 + \sqrt{s^2 + z_2^2}}{z_1 + \sqrt{s^2 + z_1^2}}]] \\
+	& = -k [\frac{s}{z_2 + \sqrt{s^2 + z_2^2}} \frac{1}{\sqrt{s^2 + z_2^2}} - \frac{s}{z_2 + \sqrt{s^2 + z_1^2}} \frac{1}{\sqrt{s^2 + z_1^2}}] \\
+	& = 
+\end{split}
+\end{equation*}
 
 \end{document}
