Finish Physics HW 8

--- a/Physics112/homework/hw8/homework-8.tex
+++ b/Physics112/homework/hw8/homework-8.tex
@@ -26,7 +26,7 @@ $\theta$ is from the center of the sphere instead of from the ring, so $cos\thet
 	dB & = \frac{2 \pi \mu_0}{4 \pi} \frac{R sin^2\theta}{R^2} dI \\
 	& = \frac{\mu_0}{2 R} sin^2\theta \frac{Q \omega}{4 \pi} sin\theta d\theta \\
 	& = \frac{Q \omega \mu_0}{8 \pi R} \int_0^\pi sin^3\theta d\theta \\
-	& = \frac{Q \omega \mu_0}{8 \pi R} [\frac{1}{3} cos^3\theta - cos\theta]_0^\pi \\
+	& = \frac{Q \omega \mu_0}{8 \pi R} [\frac{1}{3} cos^3\theta - cos\theta]_0^\pi] \\
 	& = \boxed{\frac{Q \omega \mu_0}{6 \pi R}}
 \end{split}
 \end{equation*}
@@ -135,8 +135,112 @@ Checking consistency:
 	B & = \nabla \times A \\
 	& = - \frac{\partial}{\partial s} A_z \hat{\phi} \\
 	& = - \frac{\mu_0 I}{4 \pi} \frac{\partial}{\partial s} [ln[\frac{z_2 + \sqrt{s^2 + z_2^2}}{z_1 + \sqrt{s^2 + z_1^2}}]] \\
-	& = -k [\frac{s}{z_2 + \sqrt{s^2 + z_2^2}} \frac{1}{\sqrt{s^2 + z_2^2}} - \frac{s}{z_2 + \sqrt{s^2 + z_1^2}} \frac{1}{\sqrt{s^2 + z_1^2}}] \\
-	& = 
+	& = - \frac{\mu_0 I}{4 \pi} [\frac{s}{z_2 + \sqrt{s^2 + z_2^2}} \frac{1}{\sqrt{s^2 + z_2^2}} - \frac{s}{z_2 + \sqrt{s^2 + z_1^2}} \frac{1}{\sqrt{s^2 + z_1^2}}] \\
+	& = - \frac{\mu_0 I s}{4 \pi} [\frac{z_2 - \sqrt{s^2 + z_2^2}}{z_2^2 - (s^2 + z_2^2)} \frac{1}{\sqrt{s^2 + z_2^2}} - \frac{z_1 - \sqrt{s^2 + z_1^2}}{z_1^2 - (s^2 + z_1^2)} \frac{1}{\sqrt{s^2 + z_1^2}}] \\
+	& = - \frac{\mu_0 I}{4 \pi s} [\frac{z_2 - \sqrt{s^2 + z_2^2}}{\sqrt{s^2 + z_2^2}} - \frac{z_1 - \sqrt{s^2 + z_1^2}}{\sqrt{s^2 + z_1^2}}] \\
+	& = - \frac{\mu_0 I}{4 \pi s} [\frac{z_2}{\sqrt{s^2 + z_2^2}} - \frac{z_1}{\sqrt{s^2 + z_1^2}}] \\
+	& = \boxed{- \frac{\mu_0 I}{4 \pi s} [sin\theta_2 - sin\theta_1] \hat{\phi}}
+\end{split}
+\end{equation*}
+
+\textbf{Problem 5.26}
+
+\textbf{(a)}
+What current density would produce the vector potential $A = k \hat{\phi}$ (where $k$ is a constant), in cylindrical coordinates ?
+
+\begin{equation*}
+\begin{split}
+	B & = \nabla \times A \\
+	& = \frac{1}{s} \frac{\partial}{\partial s} [s A_{\phi}] \hat{z} \\
+	& = \frac{k}{s} \hat{z} \\
+	J & = \frac{1}{\mu_0} \nabla \times B \\
+	& = - \frac{1}{\mu_0} \frac{\partial}{\partial s} B_z \hat{\phi} \\
+	& = \boxed{\frac{k}{\mu_0 s^2} \hat{\phi}}
+\end{split}
+\end{equation*}
+
+\textbf{(b)}
+Consider an azimuthally symmetric magnetic field; it points in the $z$ direction, and its magnitude is a function only of $s$.
+Check that
+$$A = A(s) \hat{\phi} \text{ where } A(s) = \frac{1}{s} \int_0^s B(s^\prime) s^\prime ds^\prime$$
+by calculating its divergence and curl.
+(This generalizes Ex 5.12.)
+
+\begin{equation*}
+\begin{split}
+	\nabla \cdot A & = \nabla \cdot \frac{1}{s} \int_0^s B(s^\prime) s^\prime ds^\prime \hat{\phi} \\
+	& = \frac{1}{s} \frac{\partial}{\partial \phi} [\frac{1}{s} \int_0^s B(s^\prime) s^\prime ds^\prime] \\
+	& = \boxed{0} \\
+	\nabla \times A & = \nabla \times \frac{1}{s} \int_0^s B(s^\prime) s^\prime ds^\prime \hat{\phi} \\
+	& = \frac{1}{s} \frac{\partial}{\partial s} [s \frac{1}{s} \int_0^s B(s^\prime) s^\prime ds^\prime] \hat{z} \\
+	& = \frac{1}{s} B(s) s \\
+	& = \boxed{B(s)}
+\end{split}
+\end{equation*}
+
+\textbf{Problem 5.27}
+If $B$ is uniform, show that $A(r) = - \frac{1}{2} (r \times B)$ works.
+That is, check that $\nabla \cdot A = 0$ and $\nabla \times A = B$.
+Is this result uique, or are there other functions with the same divergence and curl ?
+
+\begin{equation*}
+\begin{split}
+	\nabla \cdot A & = - \frac{1}{2} \nabla \times (r \times B) \\
+	& = - \frac{1}{2} [B \cdot (\nabla \times r) - r \cdot (\nabla \times B)] \\
+	& = \boxed{0} \\
+	\nabla \times A & = - \frac{1}{2} \nabla \times (r \times B) \\
+	& = - \frac{1}{2} [(B \cdot \nabla) r - (r \cdot \nabla) B + r (\nabla \cdot B) - B (\nabla \cdot r)] \\
+	& = - \frac{1}{2} [(B_x \frac{\partial r_x}{\partial x} + B_y \frac{\partial r_y}{\partial y} + B_z \frac{\partial r_z}{\partial z}) - B (3)] \\
+	& = - \frac{1}{2} [B - 3 B] \\
+	& = \boxed{B}
+\end{split}
+\end{equation*}
+
+From Problem 5.26.b:
+\begin{equation*}
+\begin{split}
+	A & = \frac{B}{s} \int_0^s s^\prime ds^\prime \hat{\phi} \\
+	& = \boxed{\frac{1}{2} B s \hat{\phi}} \\
+	\nabla \cdot A & = \frac{1}{s} \frac{\partial}{\partial \phi} \frac{1}{2} B s \\
+	& = 0 \\
+	\nabla \times A & = \frac{1}{s} \frac{\partial}{\partial s} [s \frac{1}{2} B s] \\
+	& = B
+\end{split}
+\end{equation*}
+
+\textbf{Problem 5.28}
+
+\textbf{(a)}
+By whatever means you can think of (short of looking it up), find the vector potential a distance $s$ from an infinite straight wire carrying a current $I$.
+Check that $\nabla \cdot A = 0$ and $\nabla \times A = B$.
+
+\begin{equation*}
+\begin{split}
+	\int B \cdot dl & = \mu_0 I \\
+	B & = \frac{\mu_0 I}{2 \pi s} \hat{\phi} \\
+	\nabla \times A(s) \hat{z} & = \frac{\mu_0 I}{2 \pi s} \hat{\phi} \\
+	- \frac{\partial}{\partial s} [A(s)] & = \frac{\mu_0 I}{2 \pi s} \hat{\phi} \\
+	A(s) & = - \int_a^s \frac{\mu_0 I}{2 \pi s} ds \\
+	& = \boxed{- \frac{\mu_0 I}{2 \pi} ln[\frac{s}{a}] \hat{z}} \\
+	\nabla \cdot A & = \frac{\partial}{\partial z} [- \frac{\mu_0 I}{2 \pi} ln(\frac{s}{a})] \\
+	& = 0 \\
+	\nabla \times A & = - \frac{\partial}{\partial s} [- \frac{\mu_0 I}{2 \pi} ln(\frac{s}{a})] \\
+	& = \frac{\mu_0 I}{2 \pi s} \hat{\phi} \\
+	& = B
+\end{split}
+\end{equation*}
+
+\textbf{(b)}
+Find the magnetic potential inside the wire, if it has radius $R$ and the current is uniformly distributed.
+
+\begin{equation*}
+\begin{split}
+	\int B \cdot dl & = \mu_0 I \\
+	B 2 \pi s & = \mu_0 J \pi s^2 \\
+	B & = \frac{1}{2} \mu_0 J s \hat{\phi} \\
+	- \frac{\partial}{\partial s} [A(s)] & = \frac{1}{2} \mu_0 J s \hat{\phi} \\
+	A(s) & = - \frac{1}{2} \mu_0 \frac{I}{\pi R^2} \int_a^s s ds \\
+	& = \boxed{- \frac{\mu_0 I}{4 \pi R^2} (s^2 - a^2) \hat{z}}
 \end{split}
 \end{equation*}
 
