--- a/Physics112/homework/hw9/homework-9.tex
+++ b/Physics112/homework/hw9/homework-9.tex
@@ -27,16 +27,93 @@ What is the (approximate) magnetic field at point far from the origin ?
 
 \begin{equation*}
 \begin{split}
-	A & = \frac{\mu_0}{4 \pi} \frac{m \times \hat{r}}{r^2}
+	A & = \frac{\mu_0}{4 \pi} \frac{m \hat{z} \times \hat{r}}{r^2} \\
+	& = \frac{\mu_0}{4 \pi} \frac{m [cos\theta \hat{r} - sin\theta \hat{\theta}] \times \hat{r}}{r^2} \\
+	& = \frac{\mu_0}{4 \pi} \frac{m sin\theta}{r^2} \hat{\phi} \\
+	B & = \frac{\mu_0 m}{4 \pi} (\frac{1}{r sin\theta} \frac{\partial}{\partial \theta} [sin\theta \frac{sin\theta}{r^2}] \hat{r} - \frac{1}{r} \frac{\partial}{\partial r} [r \frac{sin\theta}{r^2}] \hat{\theta}) \\
+	& = \frac{\mu_0 m}{4 \pi r^3} [2 cos\theta \hat{r} + sin\theta \hat{\theta}] \\
+	& = \boxed{\frac{\mu_0 I R^2}{4 r^3} [2 cos\theta \hat{r} + sin\theta \hat{\theta}]}
 \end{split}
 \end{equation*}
 
 \textbf{(c)}
 Show that, for points on the $z$-axis, your answer is consistent with the exact field (Ex. 5.6), when $z >> R$.
 
+At the $z$-axis, $\hat{r} = \hat{z}$ and $\theta = 0$, so
+
 \begin{equation*}
 \begin{split}
+	B & = \frac{\mu_0 I R^2}{2 z^3} \hat{z}
 \end{split}
 \end{equation*}
+
+From Ex. 5.6:
+
+\begin{equation*}
+\begin{split}
+	B(z) & = \frac{\mu_0 I}{2} \frac{R^2}{(R^2 + z^2)^{\frac{3}{2}}} \hat{z} \\
+	& = \frac{\mu_0 I R^2}{2 z^3} \hat{z}
+\end{split}
+\end{equation*}
+
+\textbf{Problem 5.39}
+
+\textbf{(a)}
+A phonograph record of radius $R$, carrying uniform surface charge $\sigma$, is rotating at constant angular velocity $\omega$.
+Find its magnetic dipole moment.
+
+\begin{equation*}
+\begin{split}
+	I & = \int \sigma v dr \\
+	& = \sigma \omega \int_0^R r dr \\
+	& = \frac{1}{2} \sigma \omega R^2 \\
+	m & = \frac{1}{2} \sigma \omega R^2 \int_0^R \pi r dr \\
+	& = \boxed{\frac{1}{4} \pi \sigma \omega R^4 \hat{z}}
+\end{split}
+\end{equation*}
+
+\textbf{(b)}
+Find the magnetic dipole moment of the spinning spherical shell in Ex. 5.11.
+Show that for points $r > R$ the potential is that of a perfect dipole.
+
+\begin{equation*}
+\begin{split}
+	dI & = \frac{dq}{t} \\
+	& = \frac{\sigma \omega 2 \pi R^2 sin\theta d\theta}{2 \pi} \\
+	& = \omega \sigma R^2 sin\theta d\theta \\
+	a & = \pi (R sin\theta)^2 \\
+	m & = \pi \sigma \omega R^4 \int_0^\pi sin^3\theta d\theta \\
+	& = \pi \sigma \omega R^4 [\frac{1}{3} cos\theta - cos\theta]_0^\pi \\
+	& = \boxed{\frac{4}{3} \pi \sigma \omega R^4 \hat{z}}
+\end{split}
+\end{equation*}
+
+\begin{equation*}
+\begin{split}
+	A & = \frac{\mu_0}{4 \pi} \frac{4}{3} \pi \sigma \omega R^4 \hat{\phi} \\
+	& = \frac{1}{3 r^2} \mu_0 \sigma \omega R^4 sin\theta \hat{\phi}
+\end{split}
+\end{equation*}
+
+\textbf{5.44}
+A current $I$ flows to the right through a rectangular bar of conducting material, in the prescence of a uniform magnetic field $B$ pointing out of the page.
+
+\textbf{(a)}
+The moving charges will be deflected $\boxed{\text{downwards.}}$
+
+\textbf{(b)}
+Find the resulting potential difference (the Hall voltage) between the top and bottom of the bar, in terms of $B$, $v$ (the speed of the charges), and the relevant dimensions of the bar.
+
+\begin{equation*}
+\begin{split}
+	q(E + v B) & = 0 \\
+	E & = - v B \\
+	V & = - \int_0^t E \cdot dl \\
+	& = \boxed{v B t}
+\end{split}
+\end{equation*}
+
+\textbf{(c)}
+The potential would be greater at the top plate instead.
 
 \end{document}
